# build-systems

./: .gitignore
conan/: conanws.yml
conan/app/: CMakeLists.txt  conanfile.py
conan/app/src/: main.cpp
conan/component-a/: conanfile.py
conan/component-a/src/: CMakeLists.txt  a.cpp
conan/component-a/src/include/a/: a.h
conan/component-b/: conanfile.py
conan/component-b/src/: CMakeLists.txt  b.cpp
conan/component-b/src/include/b/: b.h
meson/: README.md  meson.build
meson/apps/hello/: main.cpp  meson.build
meson/apps/simple/: main.cpp  meson.build
meson/components/local-a/: meson.build
meson/components/local-a/include/local-a/: a.h
meson/components/local-a/src/: a.cpp
meson/components/local-a/test/: test.cpp
meson/components/local-b/: meson.build
meson/components/local-b/include/local-b/: b.h
meson/components/local-b/src/: b.cpp
meson/subprojects/: locala  localb  simple
